--- a/_extensions/my-revealjs/_extension.yml
+++ b/_extensions/my-revealjs/_extension.yml
@@ -3,16 +3,18 @@ author: ChoCho66
 version: 1.0.0
 quarto-required: ">=1.4.0"
 contributes:
-  filters:
-    - my-revealjs.lua
+  # filters:
+    # - my-revealjs.lua
+    # - revealjs-fragment-custom.lua
   revealjs-plugins:
     - name: RevealMyrevealjs
       script:
         - my-revealjs.js
         # katex@0.16.9
         - katex.min.js
+        - revealjs-fragment-custom.js
       stylesheet:
         - my-revealjs.css
         - my-revealjs-clean.css
         - katex.min.css
-  
+        - revealjs-fragment.css
